# MultiAgents

./: README.md
A2A_Event_Planner/: a2a_protocol.py  coordinator.py  pyproject.toml  travel_agent.py  travel_coordinator.py  travel_data.json  venue_agent.py  venue_data.json  weather_agent.py
mcp-client/: README.md  client.py  pyproject.toml
weather/: README.md  pyproject.toml  weather.py
weather-skills/: pyproject.toml  weather_server.py
