[project]
name = "a2a-event-planner"
version = "0.1.0"
description = "A2A Multi-Agent Negotiation for Outdoor Event Planning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
]
